--- a/summary/summary.html
+++ b/summary/summary.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>AI Text Summarizer</title>
-    <link rel="stylesheet" href="summary.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="summary.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Company Logo" class="logo">
+        <div class="logo-container">
+            <img src="logo.png" alt="Company Logo" class="logo" />
+        </div>
         <nav>
-            <ul>
-                <li class="opt"><a href="#">Home</a></li>
-                <li class="opt"><a href="#">How it Works</a></li>
-                <li class="opt"><a href="#">About Us</a></li>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">How it Works</a></li>
+                <li><a href="#">About Us</a></li>
             </ul>
             <div class="button-container">
                 <button class="signup">Sign Up</button>
@@ -25,15 +27,16 @@
 
     <main class="main">
         <h1 class="main-heading">AI Text Summarizer</h1>
+
         <div class="main-container">
             <!-- Input Section -->
             <section class="input-container">
                 <h2>Input Text</h2>
-                <textarea placeholder="Enter your text here..."></textarea>
+                <textarea id="inputText" placeholder="Enter your text here..." aria-label="Input Text"></textarea>
                 <div class="button-group">
                     <label for="fileInput" class="file-upload-label">
                         <i class="fa-solid fa-cloud-arrow-up"></i> Upload Doc
-                        <input type="file" id="fileInput" accept=".txt">
+                        <input type="file" id="fileInput" accept=".txt" hidden />
                     </label>
                     <button id="summarizeBtn">Summarize</button>
                 </div>
@@ -44,7 +47,9 @@
                 <h2>Summary</h2>
                 <div class="summary-content">
                     <p id="summaryText">Your summarized text will appear here...</p>
-                    <button id="copyBtn"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button id="copyBtn" aria-label="Copy Summary">
+                        <i class="fa-regular fa-copy"></i> Copy
+                    </button>
                 </div>
             </section>
         </div>
